--- a/style/index.css
+++ b/style/index.css
@@ -1,111 +1,151 @@
-/* Sayfamızdaki bütün elemanların sınırlarını görebilmek için geçici bir çizgi ekleyebiliriz. Bunu proje sonunda silebilirsiniz. */
-* {
-    border: 1px solid purple;
+body {
+  margin: 0;
+  padding: 0px;
+  min-width: 750px;
+}
+.main-header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: auto;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  overflow: auto;
+  background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgba(60, 132, 206, 1) 38%,
+    rgba(48, 238, 226, 1) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
   }
-  
-  /* css-1 sayfanın kenarındaki boşlukları body tag'i ile sıfırlayın ve minimum genişliğini 750px yapın */
-  
-  body {
-    margin: 0;
-    padding: 0;
-    min-width: 750px;
+  50% {
+    background-position: 100% 100%;
   }
-  
-  .btn {
-    padding: 10px 15px;
-    cursor: pointer;
+  100% {
+    background-position: 0% 0%;
   }
-  
-  /* css-2 active isimli bir class için arkaplan'ı siyah yapın, yazılar beyaz olsun */
-  .active {
-    background-color: black;
-    color: white;
+}
+.main-header h2 {
+  margin-right: 20px;
+}
+
+.main-section {
+  padding: 40px;
+}
+
+.first-part-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 30px;
+}
+.first-part-right-section {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20%;
+  padding-left: 4%;
+}
+.middle-right-section img {
+  border: 1px solid purple;
+}
+
+.btn {
+  padding: 10px 15px;
+  width: 100px;
+  cursor: pointer;
+}
+
+.active {
+  background-color: black;
+  color: white;
+}
+
+header {
+  margin: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header h2 {
+  text-align: left;
+}
+
+header nav {
+  display: flex;
+  align-items: center;
+}
+
+nav a {
+  padding: 15px 20px;
+  border: 1px solid black;
+  background-color: gray;
+  color: white;
+  text-decoration: none;
+}
+
+.first-part-right-section-p {
+  padding-right: 30%;
+}
+
+.items-part-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-item img {
+  margin-right: 20px;
+}
+.projects-item h3 {
+  text-align: center;
+}
+
+.footer-section {
+  margin: auto;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  overflow: auto;
+  background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgba(60, 132, 206, 1) 38%,
+    rgba(48, 238, 226, 1) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 40px 40px;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
   }
-  /*. **** header **** */
-  
-  /* css-3 header içindeki 2 item'ı aralıkları eşit olacak şekilde sağa-sola yaslayalım */
-  
-  header {
-    margin: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  50% {
+    background-position: 100% 100%;
   }
-  
-  /* css-4 headerdaki h2 için metni sola yaslayalım */
-  header h2 {
-    text-align: left;
+  100% {
+    background-position: 0% 0%;
   }
-  /* css-5 headerdaki navigasyon bölümü için flex kullanalım ve flex-item'ların dikeyde ortalayalım. */
-  header nav {
-    display: flex;
-    align-items: center;
-  }
-  
-  nav a {
-    padding: 15px 20px;
-    border: 1px solid black;
-    background-color: gray;
-    color: white;
-    text-decoration: none;
-  }
-  
-  /* **** Banner **** */
-  /* css-6 .banner-section içindeki item'ların yatay ve dikey'de ortalı olmasını sağlayalım. */
-  /* css-7 .banner-section'ın genişliği ekranın %80'i olsun ve en/boy oranı 4/3 olsun. */
-  /* css-8 .banner-section'ı yukarıdan ve aşağıdan dışta %5'lik boşluk bırakalım ve yatayda ortalı olmasını sağlayalım */
-  /* css-9 ne eksik? */
-  .banner-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    aspect-ratio: 4/3;
-    margin-top: 5%;
-    margin-bottom: 5%;
-  }
-  
-  /* **** Projects **** */
-  /* css-10 projects-section class'ında;
-    display flex uygulayalım,
-    itemların arası eşit olsun.
-    satıra sığmayanlar aşağı kaysın
-    satırlar arası 30px boşluk olsun
-    yazılar ortalansın */
-  .projects-section {
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    gap: 30px;
-    text-align: center;
-  }
-  
-  /* css-11 projects-item'ların genişliği %30 olsun */
-  .projects-item {
-    width: 30%;
-  }
-  
-  /* css-12 projects-item clasındaki resimlerin;
-    genişliği bulunduğu alanın tamamı olsun
-    en/boy oranı 1/1 olsun
-    arkaplanı gray olsun */
-  .projects-item img {
-    width: 100%;
-    aspect-ratio: 1/1;
-    background-color: gray;
-  }
-  
-  /* **** footer **** */
-  footer {
-    width: 100%;
-    background: gray;
-    padding: 20px 0;
-  }
-  
-  /* css-13 footer'daki button block olsun */
-  footer button {
-    margin: 20px auto;
-    display: block;
-  }
-  
+}
+
+.footer-part-section {
+  background-color: aliceblue;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.footer-section h3 {
+  color: white;
+}
